initial work, issues with using internal package

--- a/sdk/internal/ci.yml
+++ b/sdk/internal/ci.yml
@@ -3,12 +3,13 @@ trigger:
   paths:
     include:
     - sdk/internal/
+    - eng/
 
 pr:
   paths:
     include:
     - sdk/internal/
-    
+
 stages:
 - template: ../../eng/pipelines/templates/jobs/archetype-sdk-client.yml
   parameters:
