--- a/eng/.golangci.yml
+++ b/eng/.golangci.yml
@@ -3,3 +3,5 @@ run:
   # default is true. Enables skipping of directories:
   #   vendor$, third_party$, testdata$, examples$, Godeps$, builtin$
   skip-dirs-use-default: true
+  # Do not include test files
+  tests: false
