--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -20,49 +20,53 @@ steps:
     env:
       GO111MODULE: 'on'
 
-  - ${{ if eq(parameters.RunTests, 'true') }}:
-    - pwsh: |
-        go get github.com/jstemmer/go-junit-report
-        go get github.com/axw/gocov/gocov
-        go get github.com/AlekSi/gocov-xml
-        go get github.com/matm/gocov-html
-        go get -u github.com/wadey/gocovmerge
-      displayName: "Install Coverage and Junit Dependencies"
-      workingDirectory: '${{parameters.GoWorkspace}}'
+  - pwsh: ../eng/scripts/run_tests.ps1
+    displayName: 'Run Tests and Create Coverage'
+    workingDirectory: '${{parameters.GoWorkspace}}'
 
-    - pwsh: |
-        $testDirs = (./eng/scripts/get_test_dirs.ps1 -serviceDir $(SCOPE))
-        foreach ($td in $testDirs) {
-          pushd $td
-          Write-Host "##[command]Executing go test -run "^Test" -race -v -coverprofile coverage.txt -covermode atomic $td | go-junit-report -set-exit-code > report.xml"
-          go test -run "^Test" -race -v -coverprofile coverage.txt -covermode atomic . | go-junit-report -set-exit-code > report.xml
-          # if no tests were actually run (e.g. examples) delete the coverage file so it's omitted from the coverage report
-          if (Select-String -path ./report.xml -pattern '<testsuites></testsuites>' -simplematch -quiet) {
-            Write-Host "##[command]Deleting empty coverage file"
-            rm coverage.txt
-          }
-        }
-      displayName: 'Run Tests'
-      workingDirectory: '${{parameters.GoWorkspace}}'
-      env:
-        GO111MODULE: 'on'
+  # - ${{ if eq(parameters.RunTests, 'true') }}:
+  #   - pwsh: |
+  #       go get github.com/jstemmer/go-junit-report
+  #       go get github.com/axw/gocov/gocov
+  #       go get github.com/AlekSi/gocov-xml
+  #       go get github.com/matm/gocov-html
+  #       go get -u github.com/wadey/gocovmerge
+  #     displayName: "Install Coverage and Junit Dependencies"
+  #     workingDirectory: '${{parameters.GoWorkspace}}'
 
-    - pwsh: ../eng/scripts/create_coverage.ps1
-      displayName: 'Generate Coverage XML'
-      workingDirectory: '${{parameters.GoWorkspace}}sdk'
+  #   - pwsh: |
+  #       $testDirs = (./eng/scripts/get_test_dirs.ps1 -serviceDir $(SCOPE))
+  #       foreach ($td in $testDirs) {
+  #         pushd $td
+  #         Write-Host "##[command]Executing go test -run "^Test" -race -v -coverprofile coverage.txt -covermode atomic $td | go-junit-report -set-exit-code > report.xml"
+  #         go test -run "^Test" -race -v -coverprofile coverage.txt -covermode atomic . | go-junit-report -set-exit-code > report.xml
+  #         # if no tests were actually run (e.g. examples) delete the coverage file so it's omitted from the coverage report
+  #         if (Select-String -path ./report.xml -pattern '<testsuites></testsuites>' -simplematch -quiet) {
+  #           Write-Host "##[command]Deleting empty coverage file"
+  #           rm coverage.txt
+  #         }
+  #       }
+  #     displayName: 'Run Tests'
+  #     workingDirectory: '${{parameters.GoWorkspace}}'
+  #     env:
+  #       GO111MODULE: 'on'
 
-    - task: PublishTestResults@2
-      condition: succeededOrFailed()
-      inputs:
-        testRunner: JUnit
-        testResultsFiles: '${{parameters.GoWorkspace}}sdk/**/report.xml'
-        testRunTitle: 'Go ${{ parameters.GoVersion }} on ${{ parameters.Image }}'
-        failTaskOnFailedTests: true
+    # - pwsh: ../eng/scripts/create_coverage.ps1
+    #   displayName: 'Generate Coverage XML'
+    #   workingDirectory: '${{parameters.GoWorkspace}}sdk'
 
-    - task: PublishCodeCoverageResults@1
-      condition: succeededOrFailed()
-      inputs:
-        codeCoverageTool: Cobertura
-        summaryFileLocation: '${{parameters.GoWorkspace}}sdk/coverage.xml'
-        additionalCodeCoverageFiles: '${{parameters.GoWorkspace}}sdk/coverage.html'
-        failIfCoverageEmpty: true
+  - task: PublishTestResults@2
+    condition: succeededOrFailed()
+    inputs:
+      testRunner: JUnit
+      testResultsFiles: '${{parameters.GoWorkspace}}sdk/**/report.xml'
+      testRunTitle: 'Go ${{ parameters.GoVersion }} on ${{ parameters.Image }}'
+      failTaskOnFailedTests: true
+
+  - task: PublishCodeCoverageResults@1
+    condition: succeededOrFailed()
+    inputs:
+      codeCoverageTool: Cobertura
+      summaryFileLocation: '${{parameters.GoWorkspace}}sdk/coverage.xml'
+      additionalCodeCoverageFiles: '${{parameters.GoWorkspace}}sdk/coverage.html'
+      failIfCoverageEmpty: false
