making run_tests.ps1 script a relative path again

--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -20,7 +20,7 @@ steps:
     env:
       GO111MODULE: 'on'
 
-  - pwsh: /eng/scripts/run_tests.ps1
+  - pwsh: ./eng/scripts/run_tests.ps1
     displayName: 'Run Tests and Create Coverage'
     workingDirectory: '${{parameters.GoWorkspace}}'
 
