--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -20,9 +20,15 @@ steps:
     env:
       GO111MODULE: 'on'
 
-  - pwsh: ./eng/scripts/run_tests.ps1
-    displayName: 'Run Tests and Create Coverage'
-    workingDirectory: '${{parameters.GoWorkspace}}'
+  - task: PowerShell@2
+    inputs:
+      targetType: 'filePath'
+      filePath: '/eng/scripts/run_tests.ps1'
+      workingDirectory: '${{parameters.GoWorkspace}}'
+      arguments: '${{parameters.ServiceDirectory}}'
+  # - pwsh: ./eng/scripts/run_tests.ps1
+  #   displayName: 'Run Tests and Create Coverage'
+  #   workingDirectory: '${{parameters.GoWorkspace}}'
 
   # - ${{ if eq(parameters.RunTests, 'true') }}:
   #   - pwsh: |
