--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -35,7 +35,8 @@ steps:
         foreach ($td in $testDirs) {
           pushd $td
           Write-Host "##[command]Executing go test -run "^Test" -race -v -coverprofile coverage.txt -covermode atomic $td | go-junit-report -set-exit-code > report.xml"
-          go test -run "^Test" -race -v -coverprofile coverage.txt -covermode atomic . | go-junit-report -set-exit-code > report.xml
+          go test -run "^Test" -race -v -coverprofile coverage.txt -covermode atomic .
+          # | go-junit-report -set-exit-code > report.xml
           # if no tests were actually run (e.g. examples) delete the coverage file so it's omitted from the coverage report
           if (Select-String -path ./report.xml -pattern '<testsuites></testsuites>' -simplematch -quiet) {
             Write-Host "##[command]Deleting empty coverage file"
