use nohup on linux machines

--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -51,7 +51,13 @@ steps:
     displayName: "Install TestProxy"
 
   - pwsh: |
-      Start-Process $(Build.BinariesDirectory)/test-proxy/test-proxy.exe -ArgumentList "--storage-location '$(Build.SourcesDirectory)'" -NoNewWindow -PassThru
+      if ($IsWindows) {
+        Start-Process $(Build.BinariesDirectory)/test-proxy/test-proxy.exe -ArgumentList "--storage-location '$(Build.SourcesDirectory)'" -NoNewWindow -PassThru
+      }
+      else {
+        # ref https://docs.microsoft.com/en-us/powershell/module/microsoft.powershell.management/start-process?view=powershell-7.1#example-8--create-a-detached-process-on-linux
+        Start-Process nohup "$(Build.BinariesDirectory)/test-proxy/test-proxy.exe -ArgumentList \"--storage-location '$(Build.SourcesDirectory)'\" -NoNewWindow -PassThru"
+      }
     displayName: "Run Test-Proxy"
 
   - pwsh: |
