fixing errors, passing in default env variable

--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -83,6 +83,7 @@ steps:
     workingDirectory: '${{parameters.GoWorkspace}}'
     env:
       GO111MODULE: 'on'
+      AZURE_RECORD_MODE: 'playback'
 
   - pwsh: |
       $coverageFiles = [Collections.Generic.List[String]]@()
